# CV_CPP_Practice

./: CMakeLists.txt  CMakePresets.json  basic_operations.cpp  color_detection.cpp  contour_detection.cpp  doc_scanner.cpp  draw_data.cpp  face_detection.cpp  image_warp.cpp  main.cpp  read_data.cpp  virtual_paint.cpp
